<resources>
    <string name="app_name">Fix My Number</string>
    <string name="title_activity_fragment">FragmentActivity</string>

    <!--"menu"-->
    <string name="menu_change_contacts">Change first digit in contacts</string>
    <string name="menu_remove_duplicates">Remove duplicate contacts</string>
    <string name="menu_restore_contacts">Restore saved contacts</string>

    <!--"general"-->
    <string name="button_cancel">Cancel</string>
    <string name="button_next">Next</string>
    <string name="button_back">Back</string>
    <string name="button_finish">Finish</string>
    <string name="contacts">Contacts</string>
    <string name="change_select_all">Select all</string>
    <string name="unchanged">UNCHANGED</string>
    <string name="backup_message">Created backup copy:</string>

    <!--"change contacts"-->
    <string name="change_78">Change +7 to 8</string>
    <string name="change_87">Change 8 to +7</string>
    <string name="change_700">Change +7 to 00</string>
    <string name="change_80">Change 8 to 0</string>
    <string name="change_custom">Custom change</string>
    <string name="change_change">Change</string>
    <string name="change_to">To</string>
    <string name="change_toolbar1">Select contacts to change</string>
    <string name="change_toolbar2">Select action</string>
    <string name="change_toolbar3">Confirm action</string>
    <string name="change_contact">Name</string>
    <string name="change_old_number">Old number</string>
    <string name="change_new_number">New Number</string>

    <!--"restore contacts"-->
    <string name="restore_delete">Delete</string>
    <string name="restore_load">Load</string>
    <string name="restore_toolbar">Chose contacts to restore</string>
    <string name="restore_contacts_loaded">Contacts loaded</string>

    <!--"dialogs"-->
    <string name="dialog_delete_title">Delete these contacts?</string>
    <string name="dialog_delete_message">Do you want to delete these contacts?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_load_title">Restore these contacts?</string>
    <string name="dialog_load_message">Do you want to restore these contacts?</string>
    <string name="dialog_loading">Loading</string>
    <string name="dialog_confirm_title">Confirm changes</string>
    <string name="dialog_confirm_message">Do you want to apply these changes to your contacts?</string>
    <string name="dialog_creating_backup">Creating backup</string>
    <string name="dialog_saving_contacts">Saving contacts</string>
    <string name="dialog_info_message">Backup copy will be created before changes are applied,  you will be able to restore old contacts if needed</string>
    <string name="dialog_info_cancel_message">Do not show next time</string>
</resources>
